Use flash config

--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -1,4 +1,4 @@
-{%- set external_urls = {
+{%TODO- set external_urls = {
   'github': 'https://github.com/PytorchLightning/pytorch-lightning-sandbox',
   'github_issues': 'https://github.com/PytorchLightning/pytorch-lightning-sandbox/issues',
   'contributing': 'https://github.com/PytorchLightning/pytorch-lightning/blob/master/CONTRIBUTING.md',
