--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -1,18 +1,18 @@
-{%TODO- set external_urls = {
-  'github': 'https://github.com/PytorchLightning/pytorch-lightning-sandbox',
-  'github_issues': 'https://github.com/PytorchLightning/pytorch-lightning-sandbox/issues',
+{%- set external_urls = {
+  'github': 'https://github.com/PytorchLightning/lightning-transformers',
+  'github_issues': 'https://github.com/PytorchLightning/lightning-transformers/issues',
   'contributing': 'https://github.com/PytorchLightning/pytorch-lightning/blob/master/CONTRIBUTING.md',
   'governance': 'https://github.com/PytorchLightning/pytorch-lightning/blob/master/governance.md',
-  'docs': 'https://pytorch-lightning-sandbox.rtfd.io/en/latest',
+  'docs': 'https://pytorchlightning.github.io/lightning-transformers',
   'twitter': 'https://twitter.com/PyTorchLightnin',
   'discuss': 'https://pytorch-lightning.slack.com',
-  'tutorials': 'https://pt-lightning-sandbox.readthedocs.io/en/latest/#tutorials',
-  'previous_pytorch_versions': 'https://pt-lightning-sandbox.rtfd.io/en/latest/',
-  'home': 'https://pt-lightning-sandbox.rtfd.io/en/latest/',
-  'get_started': 'https://pt-lightning-sandbox.readthedocs.io/en/latest/introduction_guide.html',
-  'features': 'https://pt-lightning-sandbox.rtfd.io/en/latest/',
-  'blog': 'https://towardsdatascience.com/@_willfalcon',
-  'resources': 'https://pt-lightning-sandbox.readthedocs.io/en/latest/#community-examples',
-  'support': 'https://pt-lightning-sandbox.rtfd.io/en/latest/',
+  'tutorials': 'https://pytorch-lightning.readthedocs.io/en/latest/#tutorials',
+  'previous_pytorch_versions': 'https://pytorch-lightning.rtfd.io/en/latest/',
+  'home': 'https://pytorchlightning.github.io/lightning-transformers/',
+  'get_started': 'https://pytorchlightning.github.io/lightning-transformers/quickstart.html',
+  'features': 'https://pytorchlightning.github.io/lightning-transformers/',
+  'blog': 'https://pytorchlightning.github.io/lightning-transformers/',
+  'resources': 'https://pytorchlightning.github.io/lightning-transformers/',
+  'support': 'https://pytorchlightning.github.io/lightning-transformers/',
 }
 -%}
