--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -11,7 +11,7 @@
   'home': 'https://pytorchlightning.github.io/lightning-transformers/',
   'get_started': 'https://pytorchlightning.github.io/lightning-transformers/quickstart.html',
   'features': 'https://pytorchlightning.github.io/lightning-transformers/',
-  'blog': 'https://pytorchlightning.github.io/lightning-transformers/',
+  'blog': 'https://pytorchlightning.ai/blog',
   'resources': 'https://pytorchlightning.github.io/lightning-transformers/',
   'support': 'https://pytorchlightning.github.io/lightning-transformers/',
 }
