Fix formatting, change some of the variables

--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -3,16 +3,16 @@
   'github_issues': 'https://github.com/PytorchLightning/lightning-transformers/issues',
   'contributing': 'https://github.com/PytorchLightning/pytorch-lightning/blob/master/CONTRIBUTING.md',
   'governance': 'https://github.com/PytorchLightning/pytorch-lightning/blob/master/governance.md',
-  'docs': 'https://pytorchlightning.github.io/lightning-transformers',
+  'docs': 'https://lightning-transformers.readthedocs.io/',
   'twitter': 'https://twitter.com/PyTorchLightnin',
   'discuss': 'https://pytorch-lightning.slack.com',
-  'tutorials': 'https://pytorch-lightning.readthedocs.io/en/latest/#tutorials',
-  'previous_pytorch_versions': 'https://pytorch-lightning.rtfd.io/en/latest/',
-  'home': 'https://pytorchlightning.github.io/lightning-transformers/',
-  'get_started': 'https://pytorchlightning.github.io/lightning-transformers/quickstart.html',
-  'features': 'https://pytorchlightning.github.io/lightning-transformers/',
+  'tutorials': 'https://lightning-transformers.readthedocs.io/quickstart.html',
+  'previous_pytorch_versions': 'https://lightning-transformers.readthedocs.io/',
+  'home': 'https://lightning-transformers.readthedocs.io/',
+  'get_started': 'https://lightning-transformers.readthedocs.io/quickstart.html',
+  'features': 'https://lightning-transformers.readthedocs.io/',
   'blog': 'https://pytorchlightning.ai/blog',
-  'resources': 'https://pytorchlightning.github.io/lightning-transformers/',
-  'support': 'https://pytorchlightning.github.io/lightning-transformers/',
+  'resources': 'https://lightning-transformers.readthedocs.io/',
+  'support': 'https://lightning-transformers.readthedocs.io/',
 }
 -%}
