--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -6,10 +6,10 @@
   'docs': 'https://lightning-transformers.readthedocs.io/',
   'twitter': 'https://twitter.com/PyTorchLightnin',
   'discuss': 'https://pytorch-lightning.slack.com',
-  'tutorials': 'https://lightning-transformers.readthedocs.io/quickstart.html',
+  'tutorials': 'https://lightning-transformers.readthedocs.io/en/latest/quickstart.html',
   'previous_pytorch_versions': 'https://lightning-transformers.readthedocs.io/',
   'home': 'https://lightning-transformers.readthedocs.io/',
-  'get_started': 'https://lightning-transformers.readthedocs.io/quickstart.html',
+  'get_started': 'https://lightning-transformers.readthedocs.io/en/latest/quickstart.html',
   'features': 'https://lightning-transformers.readthedocs.io/',
   'blog': 'https://pytorchlightning.ai/blog',
   'resources': 'https://lightning-transformers.readthedocs.io/',
