Update docs config for new theme

--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -14,5 +14,7 @@
   'blog': 'https://pytorchlightning.ai/blog',
   'resources': 'https://lightning-transformers.readthedocs.io/',
   'support': 'https://lightning-transformers.readthedocs.io/',
+  'community': 'https://pytorch-lightning.slack.com',
+  'forums': 'https://pytorch-lightning.slack.com',
 }
 -%}
